WIP add modules tests for new jspc demos